Prepare project for deployment

--- a/tmp_base.html
+++ b/tmp_base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" data-bs-theme="light">
 
   <head>
@@ -20,9 +20,9 @@
   <body>
     {% block content %}{% endblock %}
     <footer class="app-footer mt-4">
-      <div class="container-fluid py-3 px-4 d-flex justify-content-center align-items-center">
-        <div class="text-muted small">&copy; NeuroSense</div>
-        <div class="text-muted small">Built with &hearts; for better care</div>
+      <div class="container-fluid py-3 px-4 d-flex justify-content-between align-items-center">
+        <div class="text-muted small">Â© NeuroSense</div>
+        <div class="text-muted small">Built with â¤ for better care</div>
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
